manifest/ms1.yml
apiVersion: v1
kind: Service
metadata:
  name: ms1-v1-service
  #name is to identify service
  #namespace: br-retail-app-dev 
  labels:
    name: ms1-v1-service
spec:
  type: ClusterIP
  #avoid using NodePort
  selector:
    name: ms1-v1-app
    #name should match with metadata.lables.name in replica-set.yml
  ports:
  - port: 8080
